# REST_API_SAMPLE

./: CMakeLists.txt  readme.md
REST_API_SAMPLE/: CMakeLists.txt
REST_API_SAMPLE/src/: DataBaseManager.cpp  DataBaseManager.h  DetectResult.h  RESTfulServer.cpp  RESTfulServer.h  config.json  main.cpp  server - httplib.cpp  server - httplib.h
REST_API_SAMPLE/src/01-Interface/: ISerializer.h
REST_API_SAMPLE/src/02-Addins/: JsonSerializer.h
